It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Mon, May 11, 2009
---------------------------------------------------------------------
- Implemented live search for leads that can be reused in other controllers.

Sun, May 10, 2009
---------------------------------------------------------------------
- More work on simplifying search.

Fri, May 8, 2009
---------------------------------------------------------------------
- Created initial implementation of live search (Leads only so far).

Thu, May 7, 2009
---------------------------------------------------------------------
- Installed [simple_column_search] plugin.
- Initial implementation of live search for Leads.

Wed, May 6, 2009
---------------------------------------------------------------------
- Implemented prototype search box for Leads with stubbed controller.

Tue, May 5, 2009
---------------------------------------------------------------------
- Started with live search (LH #22).

Mon, May 4, 2009
---------------------------------------------------------------------
- Last bit of paging refactoring before closing LH #18.

Sun, May 3, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Opportunities.
- Simplified paging by using single proxy to store and retrieve current page.

Sat, May 2, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Contacts.

Fri, May 1, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Campaigns.

Thu, Apr 30, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Accounts.

Wed, Apr 29, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Leads.

Tue, Apr 28, 2009