@@ -138,6 +138,6 @@ campaign<%= i %>:
   starts_on           : <%= starts %>
   ends_on             : <%= starts + rand(50).days %>
   objectives          : <%= Faker::Lorem.sentence %>
-  created_at          : <%= created_at = (rand(60) + 1).days.ago + rand(600).minutes; created_at.to_s(:db) %>
+  created_at          : <%= created_at = (rand(60) + 2).days.ago + rand(600).minutes; created_at.to_s(:db) %>
   updated_at          : <%= (created_at + rand(36_000).seconds).to_s(:db) %>
 <% end %>
