@@ -69,6 +69,6 @@ lead<%= i %>:
                 <%= Faker::Address.street_address + " " + Faker::Address.secondary_address %>
                 <%= Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
   do_not_call : false
-  created_at  : <%= created_at = (rand(60) + 1).days.ago + rand(600).minutes; created_at.to_s(:db) %>
+  created_at  : <%= created_at = (rand(60) + 2).days.ago + rand(600).minutes; created_at.to_s(:db) %>
   updated_at  : <%= (created_at + rand(36_000).seconds).to_s(:db) %>
 <% end %>
