@@ -54,6 +54,6 @@ task<%= i %>:
   bucket       : <%= bucket %>
   due_at       : <%= due_at %>
   completed_at : <%= rand(4) == 0 ? Date.today - rand(5).days : "" %>
-  created_at   : <%= created_at = (rand(60) + 1).days.ago + rand(600).minutes; created_at.to_s(:db) %>
+  created_at   : <%= created_at = (rand(60) + 2).days.ago + rand(600).minutes; created_at.to_s(:db) %>
   updated_at   : <%= (created_at + rand(36_000).seconds).to_s(:db) %>
 <% end %>
