@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Mon, May 11, 2009
 ---------------------------------------------------------------------
 - Implemented live search for leads that can be reused in other controllers.
+- Fixed demo data generation to produce random recently viewed items list.
 
 Sun, May 10, 2009
 ---------------------------------------------------------------------
